// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reporter should dispose the created reporter if .run() throws 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1ma15ebe812cb1f543fee8[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1mfb1cf31fcb450d9c6374[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

"
`;

exports[`reporter should dispose the created reporter if .watch() throws 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1ma15ebe812cb1f543fee8[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1mfb1cf31fcb450d9c6374[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

"
`;

exports[`reporter should not display stats if options.stats = false 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

"
`;

exports[`reporter should only display stats in the first compilation if options.stats = 'once' 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

"
`;

exports[`reporter should report a ENOENT error while compiling, hiding the stack 1`] = `
"[2m•[22m Compiling...
[31m✖[39m Compilation failed

    [2mENOENT[22m foo

"
`;

exports[`reporter should report a TypeError error while compiling 1`] = `
"[2m•[22m Compiling...
[31m✖[39m Compilation failed

    [2mTypeError[22m foo
    [stack]

"
`;

exports[`reporter should report a failed compilation 1`] = `
"[2m•[22m Compiling...
[31m✖[39m Compilation failed

    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [1m[31mERROR in ./test/configs/files/syntax-error.js
    Module parse failed: /test/configs/files/syntax-error.js Unexpected token (4:0)
    You may need an appropriate loader to handle this file type.
    | 
    | console.log('Hello!'
    | [39m[22m

"
`;

exports[`reporter should report a fatal error while compiling 1`] = `
"[2m•[22m Compiling...
[31m✖[39m Compilation failed

    foo
    [stack]

"
`;

exports[`reporter should report a successful compilation 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

"
`;

exports[`reporter should use options.statsOptions when printing stats 1`] = `
"[2m•[22m Compiling...
[32m✓[39m Compilation succeeded [2m(10ms)[22m

    [7m CLIENT                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1ma15ebe812cb1f543fee8[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mclient.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

    [7m SERVER                   [27m
    [2m━━━━━━━━━━━━━━━━━━━━━━━━━[22m
    Hash: [1mfb1cf31fcb450d9c6374[39m[22m
        [1mAsset[39m[22m     [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m           [1m[39m[22m[1mChunk Names[39m[22m
    [1m[32mserver.js[39m[22m  x.xx kB       [1m0[39m[22m  [1m[32m[emitted][39m[22m  main

"
`;
